Changed the comfyui api replication (now typed)

--- a/v2/.vscode/settings.json
+++ b/v2/.vscode/settings.json
@@ -3,5 +3,8 @@
     "python.analysis.typeCheckingMode": "basic",
     "cSpell.words": [
         "roleplay"
+    ],
+    "cSpell.enableFiletypes": [
+        "!python"
     ]
 }
